# euler

haskell/: .gitignore  LICENSE  euler.cabal
haskell/app/: Main.hs
haskell/src/: Euler.hs
haskell/src/Euler/: Collections.hs  Combinatorics.hs  Language.hs  Math.hs  NumberTheory.hs
haskell/src/Euler/Solution/: Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem2.hs  Problem20.hs  Problem21.hs  Problem22.hs  Problem3.hs  Problem4.hs  Problem5.hs  Problem6.hs  Problem7.hs  Problem8.hs  Problem9.hs
haskell/test/: EulerTest.hs  Spec.hs
haskell/test/Euler/: CombinatoricsTest.hs  MathTest.hs  NumberTheoryTest.hs
