name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rkivalin/euler#readme
license:             MIT
license-file:        LICENSE
author:              Roman Kivalin
maintainer:          roman@kivalin.me
copyright:           2017 Roman Kivalin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Euler
                     , Euler.Collections
                     , Euler.Math
                     , Euler.Combinatorics
                     , Euler.NumberTheory
                     , Euler.Language
  other-modules:       Euler.Solution.Problem1
                     , Euler.Solution.Problem2
                     , Euler.Solution.Problem3
                     , Euler.Solution.Problem4
                     , Euler.Solution.Problem5
                     , Euler.Solution.Problem6
                     , Euler.Solution.Problem7
                     , Euler.Solution.Problem8
                     , Euler.Solution.Problem9
                     , Euler.Solution.Problem10
                     , Euler.Solution.Problem11
                     , Euler.Solution.Problem12
                     , Euler.Solution.Problem13
                     , Euler.Solution.Problem14
                     , Euler.Solution.Problem15
                     , Euler.Solution.Problem16
                     , Euler.Solution.Problem17
                     , Euler.Solution.Problem18
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-ordlist
                     , unordered-containers
  default-language:    Haskell2010

executable euler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , euler
  default-language:    Haskell2010

test-suite euler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       EulerTest
                     , Euler.MathTest
                     , Euler.CombinatoricsTest
                     , Euler.NumberTheoryTest
  build-depends:       base
                     , euler
                     , HTF
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rkivalin/euler
